--- a/www/css/jquery.mobile-1.4.5.css
+++ b/www/css/jquery.mobile-1.4.5.css
@@ -925,7 +925,7 @@ html .ui-alt-icon .ui-radio-off:after {
 }
 /* Loader */
 .ui-icon-loading {
-	background: url(../../../../../Users/Brian/Downloads/jquery.mobile-1.4.5%20(1)/images/ajax-loader.gif);
+	background: url(images/ajax-loader.gif);
 	background-size: 2.875em 2.875em;
 }
 /* Swatches */
