--- a/www/css/index.css
+++ b/www/css/index.css
@@ -4,4 +4,4 @@ img.centered {
     margin-right: auto;
 }
 
-#navigatepokemon, #map-canvas { width: 100%; height: 100%; padding: 0; }
+#map-page, #map-canvas { width: 100%; height: 100%; padding: 0; }
